Hint from dsl: make sure to have the /etc/protocols file already open before doing a chroot() if run as root. Easily done by a setprotoent(1) call. This is a better (less intrusive) fix for PR bin/44721.